# poggers

./: .gitignore  .vimspector.json  Cargo.toml  Dockerfile  README.md  test_setup.sh
data_analysis/: bar_graphs.py  benchmark.json
src/: .env  main.rs  writeup  writeup.md
src/async_implementation/: mod.rs
src/benchmarks/: join_few_fields.csvv  join_many_fields.csvv  no_joins_few_fields.csvv  no_joins_many_fields.csvv
src/build_schema/: create_internal_schema_info.rs  internal_schema_info.rs  main.rs  mod.rs  test.rs
src/build_schema/async_graphql_schema/: mod.rs
src/build_schema/field_to_operation/: mod.rs
src/build_schema/internal_schema_info/: mod.rs  test.rs
src/build_schema/mutation_builder/: mod.rs
src/build_schema/postgraphile_introspection/: mod.rs  query.rs
src/build_schema/postgraphile_query/: mod.rs  postgraphile_query.ts
src/build_schema/read_database/: mod.rs  test.rs
src/generate_sql/: component_builder.rs  mod.rs  test.rs
src/handle_query/: four_way_join_many_fields.csvv  join_few_fields.csvv  join_many_fields.csvv  mod.rs  no_joins_few_fields.csvv  no_joins_many_fields.csvv  test.rs
src/handle_query/join_database_json/: mod.rs
src/handle_query/postgres_query_builder/: mod.rs
src/integer_indexing/: mod.rs
src/juniper_implementation/: mod.rs
src/notebooks/: Postgraphile vs Poggers.ipynb
src/postgraphile_introspection/: mod.rs  postgraphile_query.ts  query.rs
src/row_selection_techniques/: mod.rs
src/server_side_json_builder/: mod.rs  parent_null_checker.rs  test.rs
src/server_side_json_builder/generate_sql/: component_builder.rs  mod.rs  test.rs
src/server_side_json_builder/handle_query/: mod.rs
src/server_side_json_builder/rows_to_json/: mod.rs
src/state_machine_builder/: column_converter.rs  mod.rs  test.rs
