[package]
name = "postgrustql"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
async-graphql-value = "2.10.2"
chrono = "0.4.19"
convert_case = "0.4.0"
petgraph = "0.6.0"
postgres = {version = "0.19.2", features = ["with-chrono-0_4", "with-serde_json-1"]}
async-graphql = {git = "https://github.com/EerikSaksi/async-graphql"}
serde_json = "1.0.68"
time = "0.3.3"
async-graphql-parser = "2.11.1"
