[package]
name = "poggers"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
chrono = "0.4.19"
convert_case = "0.4.0"
petgraph = "0.6.0"
postgres = {version = "0.19.2", features = ["with-chrono-0_4", "with-serde_json-1"]}
serde_json = "1.0.68"
time = "0.3.3"
config = "0.10.1"
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
futures = "0.3.17"
async-graphql-parser = "3.0.17"
async-graphql-value = "3.0.17"
deadpool-postgres = {version = "0.10.1", features = ["serde"]}
actix-web = "4.0.0-beta.2"
openssl = "0.10.38"
postgres-openssl = "0.5.0"
actix-rt = "2.6.0"
